kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-webapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-webapi
  template:
    metadata:
      labels:
        app: test-webapi
    spec:
      containers:
      - name: test-webapi
        image: willwolfram18/test-argo-app:0.1.0.2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
          protocol: TCP
        livenessProbe:
          timeoutSeconds: 10
          httpGet:
            path: /swagger/v1/swagger.json
            port: 80
        readinessProbe:
          timeoutSeconds: 10
          httpGet:
            path: /swagger/v1/swagger.json
            port: 80
