kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-webapi
spec:
  type: NodePort
  selector:
    app: test-webapi
  ports:
  - name: http
    port: 80
