kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-webapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/app-root: /
spec:
  rules:
    - host: my.local
      http:
        paths:
        - path: /
          backend:
            serviceName: test-webapi
            servicePort: 80
